test_suite5/ALAN/test_suite/alan-2022-examples/failing/001870_mutation.alan
source R begin elsif p7 := 5 end
